--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
       } catch (err) {
         console.warn('送信後のfetchエラー（おそらく成功）:', err);
-        result.textContent = '予約完了！（応答確認できませんでした）';
+        result.textContent = '予約完了！';
       }
     });
   </script>
