--- a/index.html
+++ b/index.html
@@ -85,6 +85,10 @@
       font-weight: bold;
       color: green;
     }
+    input[type="datetime-local"] {
+      appearance: none;
+      -webkit-appearance: none;
+    }
   </style>
 </head>
 <body>
